# backend/internal/handler/setup_routes.go
@@ -6,4 +6,5 @@ func SetupRoutes(e *echo.Echo, h *handler) {
 	e.POST("create_user", h.CreateUser)
 	e.POST("get_challenge", h.GetChallenge)
 	e.POST("solve_challenge", h.SolveChallenge)
+	e.POST("verify", h.Verify)
 }
